format utils.ipynb; add comments; remove old notebooks

--- a/project/aux/utils.ipynb
+++ b/project/aux/utils.ipynb
@@ -3,52 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "from typing import List, Optional\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk import pos_tag"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def print_if_verbose(text, verbose):\n",
+    "def print_if_verbose(text: str, verbose: bool) -> None:\n",
+    "    \"\"\"Print text if verbose is True.\"\"\"\n",
     "    if verbose:\n",
     "        print(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def lowercase_and_tokenize(s):\n",
+    "def lowercase_and_tokenize(s: str) -> List[str]:\n",
+    "    \"\"\"Split into tokens and lowercase them.\"\"\"\n",
     "    return [t.lower() for t in word_tokenize(s)]\n",
     "\n",
     "\n",
-    "def get_first_token(s):\n",
+    "def get_first_token(s: str) -> Optional[str]:\n",
+    "    \"\"\"Return the first token.\n",
+    "\n",
+    "    If s is empty, None is returned. The returned\n",
+    "    token is lowercased.\n",
+    "    \"\"\"\n",
     "    tokenized = word_tokenize(s)\n",
     "    if len(tokenized) == 0:\n",
     "        return None\n",
@@ -58,158 +49,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def find_nested_relation(\n",
-    "    relation_type, relation, cur_depth=1, max_depth=3\n",
-    "):\n",
-    "    if relation is None or cur_depth > max_depth:\n",
-    "        return None, None\n",
-    "    elif relation_type == relation.type:\n",
-    "        return relation, cur_depth\n",
-    "    else:\n",
-    "        left_result, depth = find_nested_relation(\n",
-    "            relation_type, relation.left_child, cur_depth + 1\n",
-    "        )\n",
-    "        if left_result is None:\n",
-    "            return find_nested_relation(\n",
-    "                relation_type, relation.right_child, cur_depth + 1\n",
-    "            )\n",
-    "        else:\n",
-    "            return left_result, depth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Testing\n",
+    "punctuation = set([\".\", \",\", \"!\", \"?\", \";\"])  # punctuation symbols\n",
     "\n",
-    "# %run ./relation_extraction.ipynb\n",
     "\n",
-    "# relation = Relation(\n",
-    "#     \"Explanation\", \n",
-    "#     1, \n",
-    "#     None,\n",
-    "#     Relation(\n",
-    "#         \"Background\",\n",
-    "#         2,\n",
-    "#         None,\n",
-    "#         None,\n",
-    "#         None\n",
-    "#     ),\n",
-    "#     None\n",
-    "# )\n",
-    "\n",
-    "# print(find_nested_relation(\"Background\", None))\n",
-    "\n",
-    "# print(find_nested_relation(\"Explanation\", relation))\n",
-    "\n",
-    "# print(find_nested_relation(\"Background\", relation))\n",
-    "\n",
-    "# relation = Relation(\n",
-    "#     \"Explanation\", \n",
-    "#     1, \n",
-    "#     None,\n",
-    "#     Relation(\n",
-    "#         \"Background\",\n",
-    "#         2,\n",
-    "#         None,\n",
-    "#         None,\n",
-    "#         None\n",
-    "#     ),\n",
-    "#     Relation(\n",
-    "#         \"Background\",\n",
-    "#         3,\n",
-    "#         None,\n",
-    "#         Relation(\n",
-    "#             \"Elaboration\",\n",
-    "#             4,\n",
-    "#             None,\n",
-    "#             None,\n",
-    "#             None\n",
-    "#         ),\n",
-    "#         None\n",
-    "#     )\n",
-    "# )\n",
-    "\n",
-    "# print(find_nested_relation(\"Background\", relation))\n",
-    "\n",
-    "# print(find_nested_relation(\"Elaboration\", relation))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "with open(\"aux/connectives.txt\", \"rt\") as f:\n",
-    "    connectives = set(\n",
-    "        [line.strip() for line in f.readlines()]\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "punctuation = set([\".\", \",\", \"!\", \"?\", \";\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def remove_trailing_punctuation(string):\n",
+    "def remove_trailing_punctuation(string: str) -> str:\n",
+    "    \"\"\"Remove the last character if it is a punctuation symbol.\"\"\"\n",
     "    if len(string) == 0 or string[-1] not in punctuation:\n",
     "        return string\n",
     "    else:\n",
-    "        return string[:-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fix_spacing(string):\n",
+    "        return string[:-1]\n",
+    "\n",
+    "\n",
+    "def fix_spacing(string: str) -> str:\n",
+    "    \"\"\"Removes space before the last character if it's a punctuation symbol.\"\"\"\n",
     "    if len(string) > 0 and string[-1] in punctuation:\n",
     "        return string[:-1].strip() + string[-1]\n",
     "    else:\n",
-    "        return string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def remove_leading_punctuation(string):\n",
+    "        return string\n",
+    "\n",
+    "\n",
+    "def remove_leading_punctuation(string: str) -> str:\n",
+    "    \"\"\"Removes the first character if it is a punctuation symbol.\"\"\"\n",
     "    if len(string) == 0 or string[0] not in punctuation:\n",
     "        return string\n",
     "    else:\n",
@@ -218,44 +82,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def uppercase_first_letter(string):\n",
+    "def uppercase_first_letter(string: str) -> str:\n",
+    "    \"\"\"Uppercase the first character.\n",
+    "\n",
+    "    The function skips over space, quotation marks, and/or brackets at\n",
+    "    the beginning of the string.\n",
+    "    \"\"\"\n",
     "    pointer = 0\n",
-    "    while (\n",
-    "        pointer < len(string) \n",
-    "            and (string[pointer] in {\"'\", '\"', '(', '{', '['} or string[pointer].isspace())\n",
+    "    while pointer < len(string) and (\n",
+    "        string[pointer] in {\"'\", '\"', \"(\", \"{\", \"[\"}\n",
+    "        or string[pointer].isspace()\n",
     "    ):\n",
     "        pointer += 1\n",
     "    if pointer >= len(string):\n",
     "        return string\n",
     "    else:\n",
-    "        return string[:pointer] + string[pointer].upper() + string[(pointer + 1):]"
+    "        return (\n",
+    "            string[:pointer]\n",
+    "            + string[pointer].upper()\n",
+    "            + string[(pointer + 1) :]\n",
+    "        )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def trim_connective(string):\n",
+    "# Loading connectives\n",
+    "with open(\"aux/connectives.txt\", \"rt\") as f:\n",
+    "    connectives = set([line.strip() for line in f.readlines()])\n",
+    "\n",
+    "\n",
+    "def trim_connective(string: str) -> str:\n",
+    "    \"\"\"Remove a connective at the beginning of string.\"\"\"\n",
     "    lower = string.lower()\n",
     "    for c in connectives:\n",
-    "        if lower[:len(c)] == c:\n",
-    "            if (\n",
-    "                c != \"last\" \n",
-    "                or (len(lower) > len(c) and lower[len(c)] == \",\")\n",
-    "            ):\n",
-    "                return remove_leading_punctuation(\n",
-    "                    string[len(c):]\n",
-    "                )\n",
+    "        if lower[: len(c)] == c:\n",
+    "            if c != \"last\" or (len(lower) > len(c) and lower[len(c)] == \",\"):\n",
+    "                return remove_leading_punctuation(string[len(c) :])\n",
     "            else:\n",
     "                return string\n",
     "    return string"
@@ -263,13 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_relation_type(relation):\n",
+    "    \"\"\"Returns the type of the relation.\n",
+    "\n",
+    "    If the relation parameter is None, '-' is returned.\n",
+    "    \"\"\"\n",
     "    if relation is None:\n",
     "        return \"-\"\n",
     "    else:\n",
@@ -278,17 +150,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_extra_space(s):\n",
+    "def remove_extra_space(s: str) -> str:\n",
+    "    \"\"\"Remove excessive whitespace characters.\n",
+    "\n",
+    "    E.g. \"foo    bar\" -> \"foo bar\"\n",
+    "    \"\"\"\n",
     "    return \" \".join(s.split())\n",
     "\n",
     "\n",
-    "def contains_any_of(s, s_array):\n",
+    "def contains_any_of(s: str, s_array: List[str]) -> bool:\n",
+    "    \"\"\"Check if s contains a string from s_array.\n",
+    "\n",
+    "    If a string from s_array is a substring of s, return True.\n",
+    "    Otherwise return False.\n",
+    "    \"\"\"\n",
     "    for other_s in s_array:\n",
     "        if other_s in s:\n",
     "            return True\n",
@@ -297,23 +176,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def is_nn(relation):\n",
+    "    \"\"\"Check if a given relation consists of two nuclei.\"\"\"\n",
     "    return (\n",
     "        relation is not None\n",
-    "            and relation.left.type == \"N\"\n",
-    "            and relation.right.type == \"N\"\n",
+    "        and relation.left.type == \"N\"\n",
+    "        and relation.right.type == \"N\"\n",
     "    )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fix_quotes(sent: str) -> str:\n",
+    "    \"\"\"Fix enclosing quotes.\n",
+    "\n",
+    "    Strips off the existing quotes and replace them\n",
+    "    with \".\n",
+    "    \"\"\"\n",
+    "    #     stripped = sent.strip()\n",
+    "    #     if len(stripped) > 0 and stripped[0] in {\"'\", '\"', '`'}:\n",
+    "    #         return '\"' + stripped.strip(\"'\\\"`\") + '\"'\n",
+    "    #     else:\n",
+    "    #         return sent\n",
+    "    assert sent is not None\n",
+    "    return '\"' + sent.strip(\"'\\\"`\") + '\"'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -326,35 +225,35 @@
    ],
    "source": [
     "def is_background(relation):\n",
+    "    \"\"\"Check if a given relation is Background.\"\"\"\n",
     "    return relation is not None and relation.type == \"Background\"\n",
     "\n",
     "\n",
     "def has_nested_background(relation):\n",
-    "    return (\n",
-    "        relation is not None\n",
-    "        and\n",
-    "        (\n",
-    "            is_background(relation.left_child)\n",
-    "            or is_background(relation.right_child)\n",
-    "            or has_nested_background(relation.left_child)\n",
-    "            or has_nested_background(relation.right_child)\n",
-    "        )\n",
+    "    \"\"\"Check if a given relation has nested Background subrelations.\"\"\"\n",
+    "    return relation is not None and (\n",
+    "        is_background(relation.left_child)\n",
+    "        or is_background(relation.right_child)\n",
+    "        or has_nested_background(relation.left_child)\n",
+    "        or has_nested_background(relation.right_child)\n",
     "    )\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\" and \"__file__\" not in globals():\n",
-    "    \n",
-    "    import import_ipynb\n",
+    "\n",
+    "    import import_ipynb  # noqa: F401, needed to import relation_extraction\n",
     "    import relation_extraction\n",
-    "    \n",
+    "\n",
     "    def test__has_nested_background():\n",
-    "        r010 = relation_extraction.Relation(\"Background\", None, None, None, None)\n",
+    "        r010 = relation_extraction.Relation(\n",
+    "            \"Background\", None, None, None, None\n",
+    "        )\n",
     "        r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
     "        r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
     "        r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "        r01  = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
-    "        r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
-    "        r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
+    "        r01 = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
+    "        r00 = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
+    "        r0 = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
     "\n",
     "        assert has_nested_background(r0)\n",
     "\n",
@@ -362,9 +261,9 @@
     "        r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
     "        r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
     "        r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "        r01  = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
-    "        r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
-    "        r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
+    "        r01 = relation_extraction.Relation(\"-\", None, None, r010, r011)\n",
+    "        r00 = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
+    "        r0 = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
     "\n",
     "        assert has_nested_background(r0) is False\n",
     "\n",
@@ -372,34 +271,17 @@
     "        r011 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
     "        r000 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
     "        r001 = relation_extraction.Relation(\"-\", None, None, None, None)\n",
-    "        r01  = relation_extraction.Relation(\"Background\", None, None, r010, r011)\n",
-    "        r00  = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
-    "        r0   = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
+    "        r01 = relation_extraction.Relation(\n",
+    "            \"Background\", None, None, r010, r011\n",
+    "        )\n",
+    "        r00 = relation_extraction.Relation(\"-\", None, None, r000, r001)\n",
+    "        r0 = relation_extraction.Relation(\"-\", None, None, r00, r01)\n",
     "\n",
     "        assert has_nested_background(r0)\n",
     "\n",
     "        assert has_nested_background(None) is False\n",
     "\n",
-    "\n",
     "    test__has_nested_background()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def fix_quotes(sent):\n",
-    "#     stripped = sent.strip()\n",
-    "#     if len(stripped) > 0 and stripped[0] in {\"'\", '\"', '`'}:\n",
-    "#         return '\"' + stripped.strip(\"'\\\"`\") + '\"'\n",
-    "#     else:\n",
-    "#         return sent\n",
-    "    assert sent is not None\n",
-    "    return '\"' + sent.strip(\"'\\\"`\") + '\"'"
    ]
   }
  ],
@@ -419,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
