start adding comments to aux/nlp.ipynb

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -2,29 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import enum\n",
     "from collections import namedtuple\n",
+    "import enum\n",
+    "from typing import *\n",
     "\n",
+    "import nltk.tokenize\n",
     "import pandas as pd\n",
-    "\n",
     "import pattern.en as en\n",
-    "from pycorenlp import StanfordCoreNLP\n",
-    "\n",
-    "import nltk.tokenize"
+    "from pycorenlp import StanfordCoreNLP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "stanford_nlp = StanfordCoreNLP('http://localhost:9000')"
@@ -32,31 +27,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Constituency = namedtuple(\n",
+    "# A sytactic tree is a nested tree-like structure of tagged\n",
+    "# elements. Each tagged element consists of a tag and a body.\n",
+    "# The body can be a simple token or a sequence of nested\n",
+    "# elements called a constituency.\n",
+    "# Here is a syntactic tree:\n",
+    "# (ROOT\n",
+    "#   (S\n",
+    "#     (NP (DT The) (NN sun))\n",
+    "#     (VP (VBZ is)\n",
+    "#       (VP (VBG shining)))\n",
+    "#     (. .)))\n",
+    "# In the tree above, '(NN sun)' or '(NP (DT The) (NN sun))' \n",
+    "# are elements. Their tags are 'NN' and 'NP', respectively.\n",
+    "# The body of the first element is a simple token 'sun'. The\n",
+    "# body of the second element is a consituency: a sequence of\n",
+    "# two nested elements - '(DT The)' and '(NN sun)'.\n",
+    "\n",
+    "\n",
+    "Constituency = namedtuple(  # represents a syntactic constituency\n",
     "    \"Constituency\", [\"tag\", \"startIndex\", \"endIndex\", \"depth\", \"parent_tag\"]\n",
     ")\n",
     "\n",
     "\n",
-    "def skip_blank_space(parse, pointer):\n",
+    "def skip_blank_space(parse: str, pointer: int) -> int:\n",
+    "    \"\"\"Move pointer forward until a non-blank character is met.\n",
+    "\n",
+    "    :param parse: the sytactic tree being parsed\n",
+    "    :param pointer: the current pointer value\n",
+    "    :return: a new pointer value\n",
+    "    \"\"\"\n",
     "    while pointer < len(parse) and parse[pointer].isspace():\n",
     "        pointer += 1\n",
     "    return pointer\n",
     "\n",
     "\n",
-    "def read_tag(parse, pointer):\n",
+    "def read_tag(parse: str, pointer: int) -> Tuple[str, int]:\n",
+    "    \"\"\"Read a tag.\n",
+    "\n",
+    "    Reads a continous subsequence of non-blank characters\n",
+    "    starting from pointer. Then skips all blank characters\n",
+    "    that come afterwards. Used to read tags in a syntactic\n",
+    "    tree.\n",
+    "\n",
+    "    :param parse: the sytactic tree being parsed\n",
+    "    :param pointer: the current pointer value\n",
+    "    :return: the read subsequence of non-blank characters (tag)\n",
+    "             a new pointer value\n",
+    "    \"\"\"\n",
     "    tag_start = pointer\n",
     "    while pointer < len(parse) and not parse[pointer].isspace():\n",
     "        pointer += 1\n",
     "    return parse[tag_start:pointer], skip_blank_space(parse, pointer)\n",
     "\n",
     "\n",
-    "def read_token(parse, pointer, tokens):\n",
+    "def read_token(parse: str, pointer: int, tokens: List[str]) -> int:\n",
+    "    \"\"\"Read a token.\n",
+    "\n",
+    "    Starts from pointer and reads a continous subsequence of\n",
+    "    characters until a closing round brace is met. Appends the\n",
+    "    read subsequence to tokens. Returns a pointer to the met\n",
+    "    closing round brace.\n",
+    "\n",
+    "    :param parse: the sytactic tree being parsed\n",
+    "    :param pointer: the current pointer value\n",
+    "    :param tokens: a list to which the read sequence is appended\n",
+    "    :return: a new pointer value\n",
+    "    \"\"\"\n",
     "    token_start = pointer\n",
     "    while pointer < len(parse) and parse[pointer] != \")\":\n",
     "        pointer += 1\n",
@@ -64,14 +105,62 @@
     "    return pointer\n",
     "    \n",
     "    \n",
-    "def read_body(parse, pointer, constituencies, tokens, depth, parent_tag):\n",
+    "def read_body(\n",
+    "    parse: str,\n",
+    "    pointer: int,\n",
+    "    constituencies: List[Constituency],\n",
+    "    tokens: List[str],\n",
+    "    depth: int,\n",
+    "    parent_tag: str\n",
+    ") -> Tuple[Optional[Constituency], int]:\n",
+    "    \"\"\"Read the body of an element.\n",
+    "    \n",
+    "    If the body is a simple token, reads that token\n",
+    "    and appends it to tokens. Otherwise (i.e. if the\n",
+    "    body is a constituency), reads the respective\n",
+    "    subtree recursively collecting tokens into the\n",
+    "    constituencies list.\n",
+    "    \n",
+    "    :param parse: the sytactic tree being parsed\n",
+    "    :param pointer: the current pointer value\n",
+    "    :param constituencies: a list for collecting constituencies\n",
+    "    :param tokens: a list for collecting tokens\n",
+    "    :param depth: the current level of the tree\n",
+    "    :param parent_tag: the tag of the parent element\n",
+    "    :return: a Constituency object representing the element's body\n",
+    "             (None if the body is a simple token)\n",
+    "             a new pointer\n",
+    "    \"\"\"\n",
     "    if parse[pointer] == \"(\":\n",
     "        return read_constituency(parse, pointer, constituencies, tokens, depth, parent_tag)\n",
     "    else:\n",
     "        return None, read_token(parse, pointer, tokens)\n",
     "        \n",
     "        \n",
-    "def read_constituency(parse, pointer, constituencies, tokens, depth, parent_tag):\n",
+    "def read_constituency(\n",
+    "    parse: str,\n",
+    "    pointer: int,\n",
+    "    constituencies: List[Constituency],\n",
+    "    tokens: List[str],\n",
+    "    depth: int,\n",
+    "    parent_tag: str\n",
+    ") -> Tuple[Constituency, int]:\n",
+    "    \"\"\"Read a constituency.\n",
+    "\n",
+    "    Recursively reads a syntactic subtree (constituency).\n",
+    "    Collects nested constituencies into the constituencies\n",
+    "    list. Appends the tokens corresponding to the consituency\n",
+    "    to the tokens list.\n",
+    "\n",
+    "    :param parse: the sytactic tree being parsed\n",
+    "    :param pointer: the current pointer value\n",
+    "    :param constituencies: a list for collecting constituencies\n",
+    "    :param tokens: a list for collecting tokens\n",
+    "    :param depth: the current level of the tree\n",
+    "    :param parent_tag: the tag of the parent element\n",
+    "    :return: a Constituency object representing the subtree\n",
+    "             a new pointer value\n",
+    "    \"\"\"\n",
     "    assert parse[pointer] == \"(\"\n",
     "    pointer += 1\n",
     "    tag, pointer = read_tag(parse, pointer)\n",
@@ -105,7 +194,13 @@
     "    return constituency, skip_blank_space(parse, pointer)\n",
     "\n",
     "\n",
-    "def read_constituencies(parse):\n",
+    "def read_constituencies(parse) -> List[Constituency]:\n",
+    "    \"\"\"Read a sytactic tree.\n",
+    "\n",
+    "    :param parse: the sytactic tree to be parsed\n",
+    "    :return: a list of all constituencies of the tree\n",
+    "             (including the root consituency)\n",
+    "    \"\"\"\n",
     "    constituencies = []\n",
     "    tokens = []\n",
     "    read_constituency(parse, 0, constituencies, tokens, 0, \"\")\n",
@@ -114,13 +209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def lowercase_first_char(string):\n",
+    "def lowercase_first_char(string: str) -> str:\n",
+    "    \"\"\"Lowercase the first character.\n",
+    "\n",
+    "    Doesn't lowercase if the first word is any of\n",
+    "    'I', \"Dr', 'Mr', 'Mrs', or 'Ms'.\n",
+    "\n",
+    "    :param string: the input string\n",
+    "    :return: the string with the lowercased first character\n",
+    "    \"\"\"\n",
     "    first_word = \"\".join(nltk.tokenize.word_tokenize(string)[:1])\n",
     "    \n",
     "    if first_word.strip(\".\") not in {\"I\", \"Dr\", \"Mr\", \"Mrs\", \"Ms\"}:\n",
@@ -131,13 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 22,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def get_subject(parse):\n",
+    "def get_subject(parse: str) -> Optional[Tuple[int, int]]:\n",
+    "    \"\"\"Extract the subject of a sentence.\n",
+    "    \n",
+    "    Reads a sytactic tree and returns the segment corresponding to\n",
+    "    the top NP constituency. Returns None if no NP contituencies\n",
+    "    are found.\n",
+    "\n",
+    "    :param parse: a sytactic tree\n",
+    "    :return: the pair of the start and the end indices of the segment\n",
+    "             that corresonds to the top NP consituency (None if no NP\n",
+    "             consituencies are found)\n",
+    "    \"\"\"\n",
     "    constituencies = read_constituencies(parse)\n",
     "    np_constituencies = [c for c in constituencies if c.tag == \"NP\"]\n",
     "    if len(np_constituencies) == 0:\n",
@@ -149,19 +259,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def lowercase_if_not_named_entity(text, ner_tag):\n",
+    "    \"\"\"Lowercase the first character.\n",
+    "\n",
+    "    Lowercases the first character of text. Does not lowercase\n",
+    "    if it's a named entity as indicated by ner_tag.\n",
+    "\n",
+    "    :param text: the input string (phrase)\n",
+    "    :param ner_tag: the NER tag of the phrase\n",
+    "    :return: the text with its first character lowercased\n",
+    "    \"\"\"\n",
     "    if ner_tag != \"PERSON\":\n",
     "        return lowercase_first_char(text)\n",
     "    else:\n",
     "        return text\n",
     "\n",
-    "def create_resolution_map(corefs, lowercase_if_not_name=False, sentences=None):\n",
+    "    \n",
+    "def create_resolution_map(\n",
+    "    corefs: Mapping,\n",
+    "    lowercase_if_not_name: bool = False,\n",
+    "    sentences: Optional[Mapping] = None\n",
+    ") -> Mapping:\n",
+    "    \"\"\"Map mentions to their representative mentions.\n",
+    "\n",
+    "    Takes the \"corefs\" structure returned by the Stanford\n",
+    "    coref parser and creates a map between each mention\n",
+    "    and its representative mention. This map can then\n",
+    "    used for coreference resolution. Mentiones resolved\n",
+    "    in pronouns are omitted (i.e. if the representative\n",
+    "    mention of a coref group is a pronoun the group is\n",
+    "    omitted).\n",
+    "\n",
+    "    :param corefs: the \"corefs\" structure returned by StanfordCoreNLP\n",
+    "    :param lowercase_if_not_name: if True, the first letter of each\n",
+    "           representative mention is lowercased unless it's a named\n",
+    "           entity\n",
+    "    :param sentences: the \"sentences\" structure returned by\n",
+    "                      StanfordCoreNLP (used to get NER tags of\n",
+    "                      representative mentions)\n",
+    "    :return: a map for resolving coreferences\n",
+    "    \"\"\"\n",
     "    resolution_map = {}\n",
     "\n",
     "    for _, coref_group in corefs.items():\n",
@@ -188,8 +329,30 @@
     "\n",
     "\n",
     "def resolve_subject(\n",
-    "    sentence_num, subject, resolution_map, tokens, lowercase_if_not_name=False\n",
-    "):\n",
+    "    sentence_num: int,\n",
+    "    subject: List[int],\n",
+    "    resolution_map: Mapping,\n",
+    "    tokens: List[Mapping],\n",
+    "    lowercase_if_not_name: bool = False\n",
+    ") -> str:\n",
+    "    \"\"\"Converts a phrase (subject) into its representative mention.\n",
+    "    \n",
+    "    If no representative mention exists for subject, returns its text.\n",
+    "    In either case, if lowercase_if_not_name is True, the first character\n",
+    "    of the returned text will be lowercase unless the subject is a named\n",
+    "    entity.\n",
+    "    \n",
+    "    :param sentence_num: the number of the sentence that the subject\n",
+    "                         belongs to\n",
+    "    :param subject: a part of the sentence corresponding to the subject\n",
+    "                    given by a pair of indices\n",
+    "    :param resolution_map: a map between mentions and their representative\n",
+    "                           mentions (see the previous function)\n",
+    "    :param lowercase_if_not_name: if True, the first character of the resolved\n",
+    "                                  subject will be lowercased unless the subject\n",
+    "                                  is a named entity\n",
+    "    :return: the resolved subject\n",
+    "    \"\"\"\n",
     "    assert len(subject) == 2 and subject[1] > subject[0]\n",
     "    key = (sentence_num, *subject)\n",
     "    if key in resolution_map:\n",
@@ -207,11 +370,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test__create_resolution_map():\n",
+    "    \"\"\"Test create_resolution_map.\"\"\"\n",
     "    result = stanford_nlp.annotate(\n",
     "        \"The old fellow called them. He also sent them an email.\",\n",
     "        properties={\n",
@@ -269,6 +433,7 @@
     "\n",
     "\n",
     "def test__resolve_subject():\n",
+    "    \"\"\"Test resolve_subject.\"\"\"\n",
     "    result = stanford_nlp.annotate(\n",
     "        \"Alice called them.\",\n",
     "        properties={\n",
@@ -315,13 +480,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def get_resolved_subjects(text, lowercase_if_not_name=False, stanford_nlp=stanford_nlp):\n",
+    "def get_resolved_subjects(\n",
+    "    text: str,\n",
+    "    lowercase_if_not_name: bool = False,\n",
+    "    stanford_nlp: StanfordCoreNLP = stanford_nlp\n",
+    ") -> List[Optional[str]]:\n",
+    "    \"\"\"Parse text and return the subjects of its sentences.\n",
+    "    \n",
+    "    Coreference resolution is applied to the returned subjects.\n",
+    "    The output list will contain exactly one element per each sentence\n",
+    "    in the input text.\n",
+    "    \n",
+    "    :param text: the text to be parsed\n",
+    "    :param lowercase_if_not_name: if True, the first character of each\n",
+    "                                  subject will be lowercase unless the subject\n",
+    "                                  is a named entity\n",
+    "    :stanford_nlp: a StanfordCoreNLP object\n",
+    "    :return: a list of resolved subjects\n",
+    "    \"\"\"\n",
     "    result = stanford_nlp.annotate(\n",
     "        text,\n",
     "        properties={\n",
@@ -355,11 +535,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def test__get_resolved_subjects():\n",
+    "    \"\"\"Test get_resolved_subjects.\"\"\"\n",
     "    text = \"This movie was actually neither that funny, nor super witty. The movie was meh. I liked watching that movie. If I had a choice, I would not watch that movie again.\"\n",
     "    assert get_resolved_subjects(text, False, stanford_nlp) == [\"This movie\", \"This movie\", \"I\", \"I\"]\n",
     "    \n",
@@ -422,7 +603,7 @@
     "               17\n",
     "           ) == \"Sam\"\n",
     "\n",
-    "    \n",
+    "\n",
     "test__find_subject()"
    ]
   },
@@ -1381,7 +1562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
